overflow bug fixed on home responsive page

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,7 +1,8 @@
 .carousel-container{
     position: relative;
-    margin: 0px 50px;
+    margin-left: 50px;
     height: 800px;
+    overflow: hidden;
 }
 
 .carousel-1-container{
@@ -133,7 +134,7 @@
 
   @media screen and (max-width:992px){
     .carousel-container{
-        margin: 0px 6%;
+        margin-left: 6%;
         height: 500px;
     }
 
